--- a/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitaciones.html
@@ -61,8 +61,10 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                 <td th:text="${capacitacion.tipoevento}">Tipo Evento</td>
                 <td th:text="${capacitacion.especialidadevento}">Especialidad</td>
                 <td th:text="${capacitacion.paiscapacitacion}">Pais Capacitacion</td>
-                <td th:text="${capacitacion.fechacapacitaciondesde}">Fecha Capacitacion Desde</td>
-                <td th:text="${capacitacion.fechacapacitacionhasta}">Fecha Capacitacion Hasta</td>
+               <td th:text="${#calendars.format(capacitacion.fechacapacitaciondesde, 'dd/MM/yyyy')}">Fecha Desde</td>
+                <!--<td th:text="${capacitacion.fechacapacitaciondesde}">Fecha Capacitacion Desde</td>-->
+                 <td th:text="${#calendars.format(capacitacion.fechacapacitacionhasta, 'dd/MM/yyyy')}">Fecha Desde</td>
+                <!--<td th:text="${capacitacion.fechacapacitacionhasta}">Fecha Capacitacion Hasta</td>-->
                 <td th:text="${capacitacion.tipocapacitacion}">Tipo Capacitacion</td>
                 <td th:text="${capacitacion.estadocapacitacion}">Estado Capacitacion</td>
                 <td th:text="${capacitacion.codigocapacitador.nombrecapacitador}">Nombre Capacitador</td>
