--- a/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
+++ b/src/main/resources/templates/fragments/capacitacion/capacitacionshow.html
@@ -96,19 +96,19 @@
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Fecha de Capacitación Desde:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.fechacapacitaciondesde}">Fecha de Capacitación</p>
+                                <p class="form-control-static" th:text="${#calendars.format(capacitacion.fechacapacitaciondesde, 'dd/MM/yyyy')}">Fecha de Capacitación</p>
                             </div>
                         </div>
                     <div class="form-group">
                             <label class="col-sm-5 control-label">Fecha de Capacitación Hasta:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.fechacapacitacionhasta}">Fecha de Capacitación</p>
+                                <p class="form-control-static" th:text="${#calendars.format(capacitacion.fechacapacitacionhasta, 'dd/MM/yyyy')}">Fecha de Capacitación</p>
                             </div>
                         </div>
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Tipo de Capacitación:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${capacitacion.fechacapacitacion}">Tipo de Capacitación</p>
+                                <p class="form-control-static" th:text="${capacitacion.tipocapacitacion}">Tipo de Capacitación</p>
                             </div>
                         </div>
                         <div class="form-group">
