--- a/src/main/resources/templates/fragments/comite/comites.html
+++ b/src/main/resources/templates/fragments/comite/comites.html
@@ -32,23 +32,25 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
                             <th>Descripcion</th>
                             <th>Nº de Acuerdo</th>
                             <th>Miembros maximos</th>
-                            <th>F. desde</th>
-                            <th>F. hasta</th>
+                            <th>Fecha Deesde</th>
+                            <th>Fecha Hasta</th>
                             
                             <th>Acciones</th>
 
                         </tr>
                         <tr th:each="comite : ${comites}">
-                            <td th:text="${comite.codigocomite}">Codigo</td>
+                            <td th:text="${comite.codigocomite}">Código</td>
                             <td th:text="${comite.nombrecomite}">Nombre</td>
 <!--                            <td th:text="${comite.dui}">DUI</td>
                             <td th:text="${comite.nit}">NIT</td>-->
                             <td th:text="${comite.codigoempleado.nombreempleado}">Responsable</td>
-                            <td th:text="${comite.desripcioncomite}">Descripcion</td>
-                            <td th:text="${comite.numeroacuerdocomite}">Numero acuerdo</td>
-                            <td th:text="${comite.miembromaximo}">Miembro maximo</td>
-                            <td th:text="${comite.fechadesdecomite}">F. desde</td>
-                            <td th:text="${comite.fechahastacomite}">fechahastacomite</td>
+                            <td th:text="${comite.desripcioncomite}">Descripción</td>
+                            <td th:text="${comite.numeroacuerdocomite}">Numero Acuerdo</td>
+                            <td th:text="${comite.miembromaximo}">Miembros Maximos</td>
+                            <!--<td th:text="${comite.fechadesdecomite}">Fecha Desde</td>-->
+                             <td th:text="${#calendars.format(comite.fechadesdecomite, 'dd/MM/yyyy')}">Fecha Desde</td>
+                            <!--<td th:text="${comite.fechahastacomite}">Fecha Hasta </td>-->
+                             <td th:text="${#calendars.format(comite.fechahastacomite, 'dd/MM/yyyy')}">F. Fecha Hasta</td>
 <!--                              <td th:text="${codigoempleado.codigoempleado}">fechahastacomite</td>-->
 
                             <td>
