--- a/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
+++ b/src/main/resources/templates/fragments/cuadrodirectivo/cuadrodirectivos.html
@@ -26,11 +26,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
        
         <table class="table table-striped">
             <tr>
-                <th>Codigo</th>
+                <th>Código</th>
                 <th>Responsable</th>
                 <th>Area</th>
-                <th>Descripcion</th>
-                <th>Fecha Presentacion</th>
+                <th>Descripción</th>
+                <th>Fecha Presentación</th>
                
                  <th>Acciones</th>
                 
