--- a/src/main/resources/templates/fragments/inasistencia/inasistenciaform.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciaform.html
@@ -80,11 +80,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
 <script>
     $(document).ready(function () {
         $('#fechadesdeinasistencia').datepicker({
-            dateFormat: 'yy-mm-dd'
+            dateFormat: 'dd/mm/yy'
         });
 
         $('#fechahastainasistencia').datepicker({
-            dateFormat: 'yy-mm-dd'
+            dateFormat: 'dd/mm/yy'
         });
        
     });
