--- a/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
+++ b/src/main/resources/templates/fragments/inasistencia/inasistenciashow.html
@@ -48,13 +48,13 @@
                         <div class="form-group">
                     <label class="col-sm-2 control-label">Fecha Desde:</label>
                     <div class="col-sm-10">
-                        <p class="" th:text="${inasistencia.fechadesdeinasistencia}">Fecha Hasta</p>
+                        <p class="" th:text="${#calendars.format(inasistencia.fechadesdeinasistencia, 'dd/MM/yyyy')}">Fecha Hasta</p>
                     </div>
                 </div>
                          <div class="form-group">
                     <label class="col-sm-2 control-label">Fecha Hasta:</label>
                     <div class="col-sm-10">
-                        <p class="" th:text="${inasistencia.fechahastainasistencia}">Fecha Hasta</p>
+                        <p class="" th:text="${#calendars.format(inasistencia.fechahastainasistencia, 'dd/MM/yyyy')}">Fecha Hasta</p>
                     </div>
                 </div>
                
