--- a/src/main/resources/templates/fragments/comite/comiteform.html
+++ b/src/main/resources/templates/fragments/comite/comiteform.html
@@ -86,7 +86,7 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
             <div class="form-group">
                 <label class="col-sm-2 control-label">Desde:</label>
                 <div class="col-sm-10">
-                    <input type="text" class="form-control"  placeholder="YYYY-MM-DD" required="true" th:field="*{fechadesdecomite}"/>
+                    <input type="text" class="form-control"  placeholder="DD/MM/YYYY" required="true" th:field="*{fechadesdecomite}"/>
                 </div>
             </div>
             <div class="form-group">
@@ -122,11 +122,11 @@ document.write(f.getDate() + "/" + (f.getMonth() +1) + "/" + f.getFullYear());
    <script>
     $(document).ready(function () {
         $('#fechadesdecomite').datepicker({
-            dateFormat: 'yy-mm-dd'
+            dateFormat: 'dd/mm/yy'
         });
 
         $('#fechahastacomite').datepicker({
-            dateFormat: 'yy-mm-dd'
+            dateFormat: 'dd/mm/yy'
         });
     });
     
