--- a/src/main/resources/templates/fragments/comite/comiteshow.html
+++ b/src/main/resources/templates/fragments/comite/comiteshow.html
@@ -14,7 +14,7 @@
             <th:block th:include="../templates/menu"></th:block>
         </div>
         <div class="col-md-8">
-            <h3 align="center">Consulta de Datos de Comite</h3>
+            <h3 align="center">Detalle  del Comite</h3>
             <div>
                 <form class="form-horizontal">
                     <div class="col-md-6">
@@ -70,14 +70,14 @@
                         <div class="form-group">
                             <label class="col-sm-5 control-label">Fecha Desde:</label>
                             <div class="col-sm-7">
-                                <p class="form-control-static" th:text="${comite.fechadesdecomite}">Fecha Desde</p>
+                                <p class="form-control-static" th:text="${#calendars.format(comite.fechadesdecomite, 'dd/MM/yyyy')}">Fecha Desde</p>
                             </div>
                         </div>
 
                         <div class="form-group">
-                            <label class="col-sm-7 control-label">Fecha hasta :</label>
-                            <div class="col-sm-5">
-                                <p class="form-control-static" th:text="${comite.fechahastacomite}">Fecha Hasta </p>
+                            <label class="col-sm-5 control-label">Fecha hasta :</label>
+                            <div class="col-sm-7">
+                                <p class="form-control-static" th:text="${#calendars.format(comite.fechahastacomite, 'dd/MM/yyyy')}">Fecha Hasta </p>
                             </div>
                         </div>
                         
@@ -94,7 +94,7 @@
                 </form>
                 <div class="col-md-12">
                     <div class="row" align="center">
-                        <button type="button" class="btn btn-default"><a href="#" th:href="@{/comites/}">Regresar</a></button>
+                        <button type="button" class="btn btn-info"><a href="#" th:href="@{/comites/}">Regresar</a></button>
 
                     </div>
                 </div>
